# graftpunk

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.claude/: CLAUDE.md
.github/: SECURITY.md
.github/workflows/: python-quality.yml  release.yml  requirements-quality.txt
docs/: HOW_IT_WORKS.md
docs/plans/: 2026-01-27-example-plugins-design.md  2026-02-01-plugin-config-unification-design.md  2026-02-01-plugin-config-unification-plan.md  2026-02-01-plugin-interface-v1-design.md  2026-02-01-plugin-interface-v1-plan.md  2026-02-01-plugin-polish-design.md  2026-02-01-plugin-polish-plan.md  2026-02-02-async-capture-observe-go.md  2026-02-02-har-bodies-http-command-csrf-tokens.md  2026-02-02-plugin-interface-v1-final-design.md  2026-02-02-session-command-group.md  2026-02-04-browser-identity-separation.md  2026-02-05-multi-step-login-design.md  2026-02-05-multi-step-login-plan.md  2026-02-06-structured-output-design.md  2026-02-06-structured-output-implementation.md  2026-02-11-session-storage-location-display.md  2026-02-11-session-storage-location-impl.md
docs/rfcs/: 2026-07-19-typer-native-plugin-commands.md  RFC-001-stealth-architecture-evolution.md
docs/superpowers/plans/: 2026-07-19-graftpunk-pyodide-session-load.md
examples/: README.md
examples/plugins/: hackernews.py  httpbin.yaml  httpbin_auth.yaml  quotes.py
examples/templates/: python_template.py  yaml_template.yaml
scripts/: gen_browserfree_fixture.py
src/bsc/: __init__.py  cache.py  chrome.py  config.py  encryption.py  exceptions.py  logging.py  session.py  stealth.py
src/bsc/cli/: __init__.py  main.py
src/bsc/keepalive/: __init__.py  handler.py  state.py
src/bsc/mfa/: __init__.py  magiclink.py  recaptcha.py  totp.py
src/bsc/plugins/: __init__.py
src/bsc/storage/: __init__.py  base.py  local.py  supabase.py
src/graftpunk/: __init__.py  cache.py  chrome.py  client.py  config.py  console.py  encryption.py  exceptions.py  graftpunk_session.py  logging.py  session.py  session_context.py  stealth.py  tokens.py
src/graftpunk/backends/: __init__.py  base.py  nodriver.py  selenium.py
src/graftpunk/cli/: __init__.py  command_factory.py  http_commands.py  import_har.py  keepalive_commands.py  login_commands.py  main.py  plugin_commands.py  plugin_runtime.py  session_commands.py
src/graftpunk/har/: __init__.py  analyzer.py  generator.py  parser.py
src/graftpunk/keepalive/: __init__.py  handler.py  state.py
src/graftpunk/mfa/: __init__.py  magiclink.py  recaptcha.py  totp.py
src/graftpunk/observe/: __init__.py  capture.py  context.py  headers.py  storage.py
src/graftpunk/plugins/: __init__.py  cli_plugin.py  export.py  formatters.py  login_engine.py  output_config.py  python_loader.py  yaml_loader.py  yaml_plugin.py
src/graftpunk/storage/: __init__.py  base.py  local.py  s3.py  supabase.py
tests/: __init__.py  conftest.py
tests/fixtures/: browserfree_session.enc  browserfree_session.key  sample.har
tests/unit/: __init__.py  conftest.py  test_backends.py  test_backends_serialization.py  test_browserfree_session_load.py  test_cache.py  test_cli.py  test_cli_no_external_click.py  test_cli_plugin.py  test_client.py  test_command_factory.py  test_config.py  test_console.py  test_encryption.py  test_exceptions.py  test_export.py  test_format_overrides.py  test_formatters.py  test_formatters_multi_view.py  test_graftpunk_session.py  test_har_analyzer.py  test_har_generator.py  test_har_parser.py  test_http_commands.py  test_import_har.py  test_keepalive_handler.py  test_keepalive_state.py  test_logging.py  test_login_commands.py  test_login_engine.py  test_login_engine_retry.py  test_mfa_totp.py  test_nodriver_backend.py  test_nodriver_properties.py  test_observe.py  test_observe_headers.py  test_observe_interactive.py  test_output_config.py  test_plugin_commands.py  test_plugin_discovery.py  (+15 more)
